# LLM-evaluation-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  eval-on-pr.yml
eval_suites/ad_campaign/: suite.yaml
eval_suites/ad_campaign/cases/: ab_test_suggestion.yaml  ad_headline_generation.yaml  audience_targeting.yaml  brand_safety_check.yaml  budget_optimization.yaml  competitor_positioning.yaml  pharma_ad_compliance.yaml  retargeting_ethics.yaml  seasonal_campaign.yaml  social_media_copy.yaml
eval_suites/code_reviewer/: suite.yaml
eval_suites/code_reviewer/cases/: bug_detection.yaml  security_review.yaml  style_feedback.yaml
eval_suites/content_recommendation/: suite.yaml
eval_suites/content_recommendation/cases/: binge_intervention.yaml  cold_start_new_user.yaml  content_warning.yaml  cross_genre_bridge.yaml  explain_why_recommended.yaml  filter_bubble_awareness.yaml  mood_based_suggestion.yaml  more_like_this.yaml  parental_controls.yaml  playlist_generation.yaml
eval_suites/customer_support/: suite.yaml
eval_suites/customer_support/cases/: escalation.yaml  multilingual.yaml  refund_request.yaml
eval_suites/food_delivery/: suite.yaml
eval_suites/food_delivery/cases/: allergy_inquiry.yaml  cancel_order.yaml  cold_food_complaint.yaml  delivery_eta_anxiety.yaml  (+6 more)
eval_suites/healthcare/: suite.yaml
src/llm_evals/: __init__.py  cli.py  config.py  models.py  runner.py
tests/: test_cli.py  test_config.py  test_deterministic.py  test_judge.py  test_persona.py  test_regression.py  test_runner.py
(+23 files in other folders)
